--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -306,9 +306,19 @@ hook_source = '''
     let g:gin_log_default_args = ['--graph', '--oneline', '--all', '--date=short', '--decorate=short']
 '''
 [plugins.ftplugin]
+gin-branch = '''
+    nnoremap <buffer> q :q<CR>
+'''
+gin-diff = '''
+    nnoremap <buffer> q :q<CR>
+'''
 gin-log = '''
     nnoremap <buffer> sh <Plug>(gin-action-show)
     nnoremap <buffer> sw <Plug>(gin-action-switch)
+    nnoremap <buffer> q :q<CR>
+'''
+gin-status = '''
+    nnoremap <buffer> q :q<CR>
 '''
 
 [[plugins]]
