--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -7,6 +7,11 @@ hook_source = '''
 '''
 
 [[plugins]]
+repo = 'Shougo/ddu-commands.vim'
+depends = ['denops.vim']
+on_source = ['ddu.vim']
+
+[[plugins]]
 repo = 'Shougo/ddu-ui-ff'
 on_source = ['ddu.vim']
 [plugins.ftplugin]
