feat: add ddc-source-vsnip and remove vim-vsnip-integ because of having finished support of ddc.vim

--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -115,3 +115,7 @@ on_source = ['ddc.vim']
 [[plugins]]
 repo = 'delphinus/ddc-shell-history'
 on_source = ['ddc.vim']
+
+[[plugins]]
+repo = 'uga-rosa/ddc-source-vsnip'
+on_source = ['ddc.vim']
