feat: add kensaku.vim and kensaku-search.vim (no mappings have not been set yet)

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -523,3 +523,13 @@ hook_source = '''
         call dda#completion(s:prompt)
     endfunction
 '''
+
+[[plugins]]
+repo = 'lambdalisue/kensaku.vim'
+depends = ['denops.vim']
+on_source = ['kensaku_search.vim']
+
+[[plugins]]
+repo = 'lambdalisue/kensaku-search.vim'
+depends = ['denops.vim', 'kensaku.vim']
+on_map = '<Plug>(kensaku-'
