--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -36,6 +36,7 @@ on_source = ['ddc.vim']
 hook_source = '''
     imap <C-j> <Plug>(skkeleton-toggle)
     cmap <C-j> <Plug>(skkeleton-toggle)
+    tmap <C-j> <Plug>(skkeleton-toggle)
     call skkeleton#config({
     \   'eggLikeNewline': v:true,
     \   'globalJisyo': "~/.config/skk/SKK-JISYO.L",
