--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -21,7 +21,7 @@ ddu-ff = '''
     nnoremap <buffer> * <Cmd>call ddu#ui#do_action('toggleAllItems')<CR>
     nnoremap <buffer> i <Cmd>call ddu#ui#do_action('openFilterWindow')<CR>
     nnoremap <buffer> <C-l> <Cmd>call ddu#ui#do_action('refreshItems')<CR>
-    nnoremap <buffer> p <Cmd>call ddu#ui#do_action('preview')<CR>
+    nnoremap <buffer> p <Cmd>call ddu#ui#do_action('togglePreview')<CR>
     nnoremap <buffer> q <Cmd>call ddu#ui#do_action('quit')<CR>
     nnoremap <buffer> <C-h> <Cmd>call ddu#ui#do_action('cancel')<CR>
     nnoremap <buffer> a <Cmd>call ddu#ui#do_action('chooseAction')<CR>
@@ -77,7 +77,7 @@ ddu-filer = '''
     nnoremap <buffer> o <Cmd>call ddu#ui#do_action('expandItem', {'mode': 'toggle'})<CR>
     nnoremap <buffer> O <Cmd>call ddu#ui#do_action('expandItem', {'maxLevel': -1})<CR>
     nnoremap <buffer> p <Cmd>call ddu#ui#do_action('itemAction', {'name': 'paste'})<CR>
-    nnoremap <buffer> P <Cmd>call ddu#ui#do_action('preview')<CR>
+    nnoremap <buffer> P <Cmd>call ddu#ui#do_action('togglePreview')<CR>
     nnoremap <buffer> q <Cmd>call ddu#ui#do_action('quit')<CR>
     nnoremap <buffer> r <Cmd>call ddu#ui#do_action('itemAction', {'name': 'rename'})<CR>
     nnoremap <buffer> u <Cmd>call ddu#ui#do_action('itemAction', {'name': 'undo'})<CR>
