--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -3,12 +3,12 @@ repo = 'Shougo/dein.vim'
 on_event = 'VimEnter'
 
 [[plugins]]
-repo = 'Townk/vim-autoclose'
+repo = 'cohama/lexima.vim'
 on_event = ['BufEnter']
 hook_source = '''
     augroup autoclose
         autocmd! *
-        autocmd FileType ddu-ff-filter :AutoCloseOff
+        autocmd FileType ddu-ff-filter let b:lexima_disabled = 1
     augroup END
 '''
 
