--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -10,6 +10,9 @@ hook_source = '''
         autocmd! *
         autocmd FileType ddu-ff-filter let b:lexima_disabled = 1
     augroup END
+
+    call lexima#add_rule(#{at: '\%#', char: ',', input: ',<Space>'})
+    call lexima#add_rule(#{at: ', \%#', char: '<Enter>', input: '<BS><Enter>'})
 '''
 
 [[plugins]]
