feat: cursor loop support is enabled in ddu-ui-ff

--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -46,10 +46,10 @@ ddu-ff = '''
 ddu-ff-filter = '''
     inoremap <buffer> <CR> <Esc><Cmd>call ddu#ui#do_action('closeFilterWindow')<CR>
     nnoremap <buffer> <CR> <Cmd>call ddu#ui#do_action('closeFilterWindow')<CR>
-    inoremap <buffer> <C-n> <Cmd>call ddu#ui#do_action('cursorNext')<CR>
-    inoremap <buffer> <C-p> <Cmd>call ddu#ui#do_action('cursorPrevious')<CR>
-    nnoremap <buffer> <C-n> <Cmd>call ddu#ui#do_action('cursorNext')<CR>
-    nnoremap <buffer> <C-p> <Cmd>call ddu#ui#do_action('cursorPrevious')<CR>
+    inoremap <buffer> <C-n> <Cmd>call ddu#ui#do_action('cursorNext', {'loop': v:true})<CR>
+    inoremap <buffer> <C-p> <Cmd>call ddu#ui#do_action('cursorPrevious', {'loop': v:true})<CR>
+    nnoremap <buffer> <C-n> <Cmd>call ddu#ui#do_action('cursorNext', {'loop': v:true})<CR>
+    nnoremap <buffer> <C-p> <Cmd>call ddu#ui#do_action('cursorPrevious', {'loop': v:true})<CR>
     nnoremap <buffer> q <Cmd>call ddu#ui#do_action('closeFilterWindow')<CR>
 '''
 
