fix: use legacy tag for fidget.vim to avoid breaking changes

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -464,6 +464,7 @@ on_cmd = 'help'
 [[plugins]]
 repo = 'j-hui/fidget.nvim'
 on_source = ['mason.nvim']
+rev = 'legacy'
 
 [[plugins]]
 repo = 'thinca/vim-quickrun'
