--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -143,7 +143,7 @@ hook_source = '''
 repo = 'williamboman/mason.nvim'
 on_event = ['CursorHold', 'InsertEnter', 'BufRead']
 on_cmd = ['Mason', 'MasonInstall', 'MasonUninstall', 'MasonUninstallAll', 'MasonLog']
-hook_source = 'source ~/dotfiles/.vim/lua/nvim-lsp.lua'
+hook_post_source = 'source ~/dotfiles/.vim/lua/nvim-lsp.lua'
 
 [[plugins]]
 repo = 'williamboman/mason-lspconfig.nvim'
@@ -159,7 +159,8 @@ lspinfo = '''
 '''
 
 [[plugins]]
-repo = 'uga-rosa/ddc-nvim-lsp-setup'
+repo = 'uga-rosa/ddc-source-lsp-setup'
+depends = ['ddc-source-lsp']
 on_source = ['nvim-lspconfig']
 
 [[plugins]]
