fix: modify font name

--- a/scoop/windows_terminal_settings.json
+++ b/scoop/windows_terminal_settings.json
@@ -86,7 +86,7 @@
             "cursorShape": "filledBox",
             "font":
             {
-                "face": "Delugia Nerd Font",
+                "face": "Delugia",
                 "size": 9.0
             },
             "foreground": "#FFFFFF",
