--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -93,6 +93,7 @@ on_source = ['ddc.vim']
 [[plugins]]
 repo = 'Shougo/ddc-source-lsp'
 on_source = ['ddc.vim']
+hook_post_source = 'source ~/dotfiles/.vim/lua/nvim-lsp.lua'
 
 [[plugins]]
 repo = 'Shougo/ddc-source-input'
