feat: add dmacro.nvim plugin

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -560,3 +560,12 @@ on_event = ['CursorHold']
 lua_source = '''
 require('incline').setup()
 '''
+
+[[plugins]]
+repo = 'tani/dmacro.nvim'
+on_event = ['InsertEnter']
+lua_source = '''
+require('dmacro').setup({
+    dmacro_key = '<C-t>'
+})
+'''
