--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -177,6 +177,7 @@ repo = 'vim-denops/denops.vim'
 on_event = ['VimEnter']
 hook_source = '''
     let g:denops_server_addr = '127.0.0.1:32123'
+    let g:denops#server#deno_args = ['-q', '--no-lock', '--unstable-kv', '-A']
 '''
 
 [[plugins]]
@@ -568,3 +569,24 @@ require('hlchunk').setup({})
 [[plugins]]
 repo = 'mbbill/undotree'
 on_event = ['BufEnter']
+
+[[plugins]]
+repo = 'yukimemi/futago.vim'
+depends = ['denops.vim']
+on_event = ['BufRead', 'InsertEnter']
+on_func = 'futago#'
+on_cmd = ['FutagoHistory']
+hook_source = '''
+    let g:futago_model = 'gemini-1.5-flash'
+    let g:futago_opener = 'split'
+	let g:futago_safety_settings = [
+	  \ { "category": "HARM_CATEGORY_HATE_SPEECH", "threshold": "BLOCK_NONE" },
+	  \ { "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT", "threshold": "BLOCK_NONE"  },
+	  \ { "category": "HARM_CATEGORY_HARASSMENT", "threshold": "BLOCK_ONLY_HIGH" },
+	  \ { "category": "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold": "BLOCK_MEDIUM_AND_ABOVE" },
+	  \ ]
+	let g:futago_generation_config = {
+	  \   "temperature": 0.9,
+	  \   "maxOutputTokens": 5000,
+	  \ }
+'''
