feat: block none for futago.vim

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -577,13 +577,14 @@ on_event = ['BufRead', 'InsertEnter']
 on_func = 'futago#'
 on_cmd = ['FutagoHistory']
 hook_source = '''
-    let g:futago_model = 'gemini-1.5-flash'
+    " let g:futago_model = 'gemini-1.5-flash'
+    let g:futago_model = 'gemini-1.5-pro'
     let g:futago_opener = 'split'
 	let g:futago_safety_settings = [
 	  \ { "category": "HARM_CATEGORY_HATE_SPEECH", "threshold": "BLOCK_NONE" },
 	  \ { "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT", "threshold": "BLOCK_NONE"  },
-	  \ { "category": "HARM_CATEGORY_HARASSMENT", "threshold": "BLOCK_ONLY_HIGH" },
-	  \ { "category": "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold": "BLOCK_MEDIUM_AND_ABOVE" },
+	  \ { "category": "HARM_CATEGORY_HARASSMENT", "threshold": "BLOCK_NONE" },
+	  \ { "category": "HARM_CATEGORY_DANGEROUS_CONTENT", "threshold": "BLOCK_NONE" },
 	  \ ]
 	let g:futago_generation_config = {
 	  \   "temperature": 0.9,
