feat: add and modify prompt for gp.nvim

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -660,6 +660,12 @@ local conf = {
             local agent = gp.get_command_agent()
             gp.Prompt(params, gp.Target.popup, agent, prompt)
         end,
+
+        RefactorPopup = function(gp, params)
+            local prompt = LoadTextFile("refactor.md")
+            local agent = gp.get_command_agent()
+            gp.Prompt(params, gp.Target.popup, agent, prompt)
+        end,
     },
 }
 require('gp').setup(conf)
