--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -574,7 +574,35 @@ on_event = ['BufEnter']
 repo = 'Robitx/gp.nvim'
 on_event = ['VimEnter']
 lua_source = '''
-function LoadTextFile(fileName)
+-- key mappings
+local function keymapOptions(desc)
+    return {
+        noremap = true,
+        silent = true,
+        nowait = true,
+        desc = "LLM prompt " .. desc,
+    }
+end
+vim.keymap.set({"n", "i"}, "<C-g>c", "<Cmd>GpChatNew<CR>", keymapOptions("New Chat"))
+vim.keymap.set("v", "<C-g>c", ":<C-u>'<,'>GpChatNew<CR>", keymapOptions("New Chat"))
+
+vim.keymap.set({"n", "i"}, "<C-g>f", "<Cmd>GpChatFinder<CR>", keymapOptions("Chat Finder"))
+
+vim.keymap.set({"n", "i"}, "<C-g>r", "<Cmd>GpRewrite<CR>", keymapOptions("Rewrite"))
+vim.keymap.set("v", "<C-g>r", ":<C-u>'<,'>GpRewrite<CR>", keymapOptions("Rewrite"))
+
+vim.keymap.set({"n", "i"}, "<C-g>a", "<Cmd>GpAppend<CR>", keymapOptions("Append"))
+vim.keymap.set("v", "<C-g>a", ":<C-u>'<,'>GpAppend<CR>", keymapOptions("Append"))
+
+vim.keymap.set({"n", "i"}, "<C-g>b", "<Cmd>GpPrepend<CR>", keymapOptions("Prepend"))
+vim.keymap.set("v", "<C-g>b", ":<C-u>'<,'>GpPrepend<CR>", keymapOptions("Prepend"))
+
+vim.keymap.set("v", "<C-g>i", ":<C-u>'<,'>GpImplement<CR>", keymapOptions("Implement"))
+
+vim.keymap.set("v", "<C-g>tj", ":<C-u>'<,'>GpTranslateToJpPopup<CR>", keymapOptions("Translate to JP"))
+vim.keymap.set("v", "<C-g>te", ":<C-u>'<,'>GpTranslateToEnPopup<CR>", keymapOptions("Translate to EN"))
+
+local function LoadTextFile(fileName)
     local home_dir = os.getenv('HOME')
     local prompt_dir = 'dotfiles/.vim/llm_prompt'
     local filePath = home_dir .. '/' .. prompt_dir .. '/' .. fileName
