fix: Use latest models of gemini

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -623,7 +623,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-1.5-pro"},
+            model = {model = "gemini-1.5-pro-002", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -631,15 +631,15 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-1.5-flash"},
+            model = {model = "gemini-1.5-flash-002", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
-            name = "Gemini-Flash-Exp",
+            name = "Gemini-Flash-8B",
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-1.5-flash-exp-0827"},
+            model = {model = "gemini-1.5-flash-8b", top_k = 40},
             system_prompt = general_system_prompt,
         },
     },
