feat: add GenerateAndReplaceProgram command and mapping for this command

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -676,4 +676,7 @@ local conf = {
     },
 }
 require('gp').setup(conf)
+
+local gpNvimScriptFilePath = os.getenv('HOME') .. '/dotfiles/.vim/llm_prompt/gp_nvim_func.vim'
+vim.api.nvim_command("source " .. gpNvimScriptFilePath)
 '''
