feat: add cabbrev for CodeCompanion commands

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -741,4 +741,7 @@ require('codecompanion').setup({
     },
 })
 
+vim.cmd('cabbrev cci CodeCompanion')
+vim.cmd('cabbrev ccc CodeCompanionChat')
+vim.cmd('cabbrev cca CodeCompanionActions')
 '''
